--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <h1>Tic-Tac-Toe</h1>
         <div class="controls">
           <i class="fas fa-expand" id="fullscreen-toggle" title="Fullscreen"></i>
-          <i class="fa-solid fa-circle-half-stroke" id="themes" title="Light Theme"></i>
         </div>
     </header>
 
@@ -44,8 +43,8 @@
         </div>
         <div id="player-info">
             <div id="player-names">
-                <input type="text" id="player1" placeholder="Player 1 Name" style="display: none;">
-                <input type="text" id="player2" placeholder="Player 2 Name" style="display: none;">
+                <input type="text" id="player1" placeholder="Player 1 Name">
+                <input type="text" id="player2" placeholder="Player 2 Name">
                 <button id="start-game">Start Game</button>
             </div>
         </div>
