--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="player-names">
                 <input type="text" id="player1" placeholder="Player 1 Name">
                 <input type="text" id="player2" placeholder="Player 2 Name">
-                <button id="start-game">Start Game</button>
+                <button id="start-game" title="Start Game">Start</button>
             </div>
         </div>
         <div id="game-info">
