--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="main-content">
         <div id="setup">
             <h2>Select Game Mode</h2>
-            <div class="button-container">
+            <div class="button-container1">
                 <button id="play-human" title="Against Player">Player</button>
                 <button id="play-ai" title="Against AI">AI</button>
             </div>
@@ -51,7 +51,6 @@
         <div id="game-info">
             <div id="current-player">Current Player: </div>
             <div id="game-board">
-                <!-- Game cells -->
                 <div class="cell" data-index="0">1</div>
                 <div class="cell" data-index="1">2</div>
                 <div class="cell" data-index="2">3</div>
@@ -63,8 +62,10 @@
                 <div class="cell" data-index="8">9</div>
             </div>
             <div id="winner-message">winner-message</div>
-            <button id="reset-game">Reset Game</button>
-            <button id="home-button">Home</button>
+            <div class="button-container2">
+                <button id="reset-game">Reset Game</button>
+                <button id="home-button">Home</button>
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
