--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div id="game-info">
             <div id="current-player">Current Player: </div>
             <div id="game-board">
-                <div class="cell" data-index="0">1</div>
-                <div class="cell" data-index="1">2</div>
-                <div class="cell" data-index="2">3</div>
-                <div class="cell" data-index="3">4</div>
+                <div class="cell" data-index="0">X</div>
+                <div class="cell" data-index="1">O</div>
+                <div class="cell" data-index="2">x</div>
+                <div class="cell" data-index="3">o</div>
                 <div class="cell" data-index="4">5</div>
                 <div class="cell" data-index="5">6</div>
                 <div class="cell" data-index="6">7</div>
