--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="cell" data-index="8">9</div>
             </div>
             <div id="winner-message">winner-message</div>
-            <div class="button-container2">
+            <div id="button-container2">
                 <button id="reset-game">Reset Game</button>
                 <button id="home-button">Home</button>
             </div>
