--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
         </div>
         <div id="game-info">
-            <div id="current-player">Current Player: </div>
+            <div>Current Player:</div>
+            <div id="current-player">Current Player:</div>
             <div id="game-board">
                 <div class="cell" data-index="0">X</div>
                 <div class="cell" data-index="1">O</div>
