--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Dhanush_R" />
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
 
@@ -54,15 +55,15 @@
             <div>Current Player:</div>
             <div id="current-player">Current Player:</div>
             <div id="game-board">
-                <div class="cell" data-index="0">X</div>
-                <div class="cell" data-index="1">O</div>
-                <div class="cell" data-index="2">x</div>
-                <div class="cell" data-index="3">o</div>
-                <div class="cell" data-index="4">5</div>
-                <div class="cell" data-index="5">6</div>
-                <div class="cell" data-index="6">7</div>
-                <div class="cell" data-index="7">8</div>
-                <div class="cell" data-index="8">9</div>
+                <div class="cell" data-index="0"></div>
+                <div class="cell" data-index="1"></div>
+                <div class="cell" data-index="2"></div>
+                <div class="cell" data-index="3"></div>
+                <div class="cell" data-index="4"></div>
+                <div class="cell" data-index="5"></div>
+                <div class="cell" data-index="6"></div>
+                <div class="cell" data-index="7"></div>
+                <div class="cell" data-index="8"></div>
                 <audio id="click-sound" src="audio/click-effect-86995_jYJhtbY8.mp3"></audio>
             </div>
             <div id="winner-message">winner-message</div>
