--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
-    />
+    >
 
     <!-- font-awesome -->
     <link
@@ -23,7 +23,7 @@
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
 
 </head>
 <body>
@@ -66,7 +66,7 @@
                 <audio id="click-sound" src="audio/click-effect-86995_jYJhtbY8.mp3"></audio>
             </div>
             <div id="winner-message">winner-message</div>
-            <audio id="win-sound" src="audio/Voicy_Confetti pop with screaming kids.mp3"></audio>
+            <audio id="win-sound" src="audio/Voicy_Confetti_pop.mp3"></audio>
             <div id="button-container2">
                 <button id="reset-game">Reset Game</button>
                 <button id="home-button">Home</button>
